yeni validator eklendi

--- a/src/app/AracEkle/arac-ekle.component.html
+++ b/src/app/AracEkle/arac-ekle.component.html
@@ -53,7 +53,7 @@
             <!-- Araç Plaka -->
             <div class="form-group">
               <label for="aracPlakaLabel" class="control-label form-style-ozel-label">Araç Plaka</label>
-              <input type="text" class="form-control form-style-ozel" id="aracPlakaLabel" placeholder="Araç Plaka" name="arac_plaka" #arac_plaka="ngModel" [(ngModel)]="arac_model.arac_plaka" required  validateEqual="arac_plaka">
+              <input type="text" class="form-control form-style-ozel" id="aracPlakaLabel" placeholder="Araç Plaka" name="arac_plaka" #arac_plaka="ngModel" [(ngModel)]="arac_model.arac_plaka" required  validateAhmet>
               <span class="help-block">Bu alan zorunludur.</span>
             </div>
             <!-- Araç Plaka -->
