--- a/src/app/AracEkle/arac-ekle.component.html
+++ b/src/app/AracEkle/arac-ekle.component.html
@@ -25,154 +25,7 @@
   <!-- Araç Ekle -->
   <div class="row">
     <div class="col-md-12">
-      <!-- Panel -->
-      <div class="panel panel-light">
-        <!-- Panel Heading -->
-        <div class="panel-heading">
-          <!-- Panel Left Block -->
-          <div class="panel-heading-left-block">
-            <span> Araç Ekle </span>
-          </div>
-          <!-- Panel Heading Left Block -->
-        </div>
-        <!-- Panel Heading -->
-        <!-- Panel Body -->
-        <form #aracEkleForm="ngForm" (submit)="submitAracEkleForm(aracEkleForm)">
-        <div class="panel-body">
-
-            <!-- Araç Plaka -->
-            <div class="form-group">
-              <label for="aracPlakaLabel" class="control-label form-style-ozel-label">Araç Plaka</label>
-              <input
-                type="text"
-                class="form-control form-style-ozel"
-                id="aracPlakaLabel"
-                placeholder="Araç Plaka"
-                name="arac_plaka"
-                #arac_plaka="ngModel"
-                [(ngModel)]="arac_model.arac_plaka"
-              >
-
-            </div>
-            <!-- Araç Plaka -->
-
-
-            <!-- Araç Marka -->
-            <div class="form-group">
-              <label class="control-label form-style-ozel-label">Araç Marka</label>
-
-              {{ arac_markalari | json }}
-              <ul>
-                <li *ngFor="let arac_marka of arac_markalari">{{ arac_marka.marka_adi}}</li>
-              </ul>
-              <select class="form-control form-style-ozel" name="arac_marka" [(ngModel)]="arac_model.arac_marka">
-                <option value="0">Araç Marka Seçiniz</option>
-                <!--<option  *ngFor="let arac_marka of arac_markalari" value="{{ arac_marka.id }}">{{ arac_marka.marka_adi }}</option>-->
-              </select>
-            </div>
-            <!-- Araç Marka -->
-
-            <!-- Araç Modeli -->
-            <div class="form-group">
-              <label class="control-label form-style-ozel-label">Araç Modeli</label>
-              <select class="form-control form-style-ozel" name="arac_modeli" [(ngModel)]="arac_model.arac_modeli" >
-                <option value="0">Araç Modeli Seçiniz</option>
-                <option value="1">3 Serisi</option>
-                <option value="4">4 Serisi</option>
-                <option value="5">5 Serisi</option>
-                <option value="6">7 Serisi</option>
-              </select>
-            </div>
-            <!-- Araç Modeli -->
-
-            <!-- Araç Çekiş Tipi -->
-            <div class="form-group">
-              <label class="control-label form-style-ozel-label">Çekiş Tipi</label>
-              <select class="form-control form-style-ozel" name="arac_cekis_tipi" [(ngModel)]="arac_model.arac_cekis_tipi" >
-                <option value="0">Çekiş Tipi Seçiniz</option>
-                <option *ngFor="let arac_cekis of arac_cekis_tipleri" [value]="arac_cekis.id">{{ arac_cekis.cekis_tip_adi }}</option>
-              </select>
-            </div>
-            <!-- Araç Çekiş Tipi -->
-
-            <!-- Araç Kasa Tipi -->
-            <div class="form-group">
-              <label class="control-label form-style-ozel-label">Kasa Tipi</label>
-              <select class="form-control form-style-ozel" name="arac_kasa_tipi" [(ngModel)]="arac_model.arac_kasa_tipi" >
-                <option value="0">Kasa Tipi Seçiniz</option>
-                <option *ngFor="let arac_kasa of arac_kasa_tipleri" [value]="arac_kasa.id">{{ arac_kasa.kasa_tipi_adi }}</option>
-              </select>
-            </div>
-            <!-- Araç Kasa Tipi -->
-
-            <!-- Araç Motor Hacmi -->
-            <div class="form-group">
-              <label class="control-label form-style-ozel-label">Motor Hacmi</label>
-              <select class="form-control form-style-ozel" name="arac_motor_hacmi" [(ngModel)]="arac_model.arac_motor_hacmi" >
-                <option value="0">Motor Hacmi Seçiniz</option>
-                <option *ngFor="let arac_motor_hacim of arac_motor_hacimleri" [value]="arac_motor_hacim.id">{{ arac_motor_hacim.motor_hacim_adi }}</option>
-              </select>
-            </div>
-            <!-- Araç Motor Hacmi -->
-
-            <!-- Araç Vites Tipi -->
-            <div class="form-group">
-              <label class="control-label form-style-ozel-label">Vites Tipi</label>
-              <select class="form-control form-style-ozel" name="arac_vites_turu" [(ngModel)]="arac_model.arac_vites_tipi" >
-                <option value="0">Vites Tipi Seçiniz</option>
-                <option *ngFor="let arac_vites of arac_vites_tipleri" [value]="arac_vites.id">{{ arac_vites.vites_tipi_adi }}</option>
-              </select>
-            </div>
-            <!-- Araç Vites Tipi -->
-
-            <!-- Araç Yakıt Tipi -->
-            <div class="form-group">
-              <label class="control-label form-style-ozel-label">Yakıt Tipi</label>
-              <select class="form-control form-style-ozel" name="arac_yakit_tipi" [(ngModel)]="arac_model.arac_yakit_tipi" >
-                <option value="0">Yakit Tipi Seçiniz</option>
-                <option *ngFor="let arac_yakit of arac_yakit_turleri" [value]="arac_yakit.id">{{ arac_yakit.yakit_tipi_adi }}</option>
-              </select>
-            </div>
-            <!-- Araç Yakıt Tipi -->
-
-            <!-- Araç Başlangıç Şube -->
-            <div class="form-group">
-              <label class="control-label form-style-ozel-label">Başlangıç Şube</label>
-              <select class="form-control form-style-ozel" name="arac_baslangic_sube" [(ngModel)]="arac_model.arac_baslangic_sube" >
-                <option value="0">Başlangıç Şube Seçiniz</option>
-                <option *ngFor="let subeler of arac_baslangic_subeleri" [value]="subeler.id">{{ subeler.sube_adi }}</option>
-              </select>
-            </div>
-            <!-- Araç Başlangıç Şube -->
-
-            <!-- Araç Kilometresi -->
-            <div class="form-group">
-              <label for="arac_kilometresiLabel" class="control-label form-style-ozel-label">Kilometre</label>
-              <input
-                type="text"
-                class="form-control form-style-ozel"
-                id="arac_kilometresiLabel"
-                placeholder="Araç Kilometresi"
-                name="arac_kilometresi"
-                [(ngModel)]="arac_model.arac_kilometre">
-            </div>
-            <!-- Araç Kilometresi -->
-
-
-
-        </div>
-        <!-- Panel Body -->
-        <!-- Panel Footer -->
-        <div class="panel-footer">
-          <div class="panel-footer-right-block">
-              <button class="btn btn-success-ozel btn-lg"><i class="fa fa-cloud-upload"></i> Kaydet</button>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-        <!-- Panel Footer -->
-        </form>
-      </div>
-      <!-- Panel -->
+        <app_arac_ekle_form_component></app_arac_ekle_form_component>
     </div>
   </div>
   <!-- Araç Ekle -->
