--- a/src/app/AracDetay/arac-detay.component.html
+++ b/src/app/AracDetay/arac-detay.component.html
@@ -25,138 +25,7 @@
     <!-- Left -->
     <div class="col-md-8">
       <!-- Araç Detay -->
-      <div class="panel panel-light">
-        <!-- Panel Heading -->
-        <div class="panel-heading">
-          <!-- Panel Left Block -->
-          <div class="panel-heading-left-block">
-            <span> Araç Detay </span>
-          </div>
-          <!-- Panel Heading Left Block -->
-        </div>
-        <!-- Panel Heading -->
-        <div class="panel-body">
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Plaka</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>35 D 8897</span>
-            </div>
-          </div>
-
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Marka</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>Bmw</span>
-            </div>
-          </div>
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Model</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>3 Serisi</span>
-            </div>
-          </div>
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Yakıt</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>Dizel</span>
-            </div>
-          </div>
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Çekiş Türü</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>Arkadan İtiş</span>
-            </div>
-          </div>
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Kasa</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>Sedan</span>
-            </div>
-          </div>
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Motor Hacmi</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>1801 - 2000 cm3</span>
-            </div>
-          </div>
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Vites</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>Otomatik</span>
-            </div>
-          </div>
-
-          <div class="row musteri-detay-list-row-block">
-            <div class="col-md-3">
-              <span>Kilometresi</span>
-            </div>
-            <div class="col-md-1">
-              <span>:</span>
-            </div>
-            <div class="col-md-8">
-              <span>84.500</span>
-            </div>
-          </div>
-
-        </div>
-        <div class="panel-footer">
-          <!-- Panel Footer Left Block -->
-          <div class="panel-footer-left-block">
-            <div class="panel-footer-ekleyen-kullanici-block">
-              <span>Ekleyen Kullanıcı : <a href="#" class="link-blue-hover">Ahmet Elçik</a></span>
-            </div>
-          </div>
-          <!-- Panel Footer Left Block -->
-          <!-- Panel Footer Right Block -->
-          <div class="panel-footer-right-block">
-            <div class="panel-footer-olusturulma-tarihi-block">
-              <span>Oluşturulma Tarihi : 12 Aralık 2016 11:30</span>
-            </div>
-          </div>
-          <!-- Panel Footer Right Block -->
-          <div class="clearfix"></div>
-        </div>
-      </div>
+      <app-arac-detay-goster-component></app-arac-detay-goster-component>
       <!-- Araç Detay -->
     </div>
     <!-- Left -->
