arac notlari eklendi

--- a/src/app/AracDetay/arac-detay.component.html
+++ b/src/app/AracDetay/arac-detay.component.html
@@ -164,96 +164,7 @@
               <div class="tab-page-content">
                 <ul class="not-listele-tab">
                   <li class="not-listele-tab-not-ekle-btn"><button class="btn btn-primary-ozel btn-block"><i class="fa fa-plus"></i> Yeni Not</button></li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-commenting"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad asperiores aut corporis distinctio, dolorum, explicabo fuga neque nisi reiciendis suscipit veniam voluptatem voluptatibus. Consequuntur impedit laborum laudantium sed soluta?</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
+                  <app-arac-detay-arac-notlari-listele></app-arac-detay-arac-notlari-listele>
                 </ul>
               </div>
             </tab>
