--- a/src/app/AracDetay/arac-detay.component.html
+++ b/src/app/AracDetay/arac-detay.component.html
@@ -43,7 +43,7 @@
                 <button class="btn btn-default-ozel btn-block" dropdownToggle>DİĞER <span class="caret"></span></button>
                 <ul dropdownMenu role="menu" aria-labelledby="single-button" class="btn-block">
                   <li role="menuitem"><a routerLink="/araclar/5/duzenle" class="dropdown-item"><i class="fa fa-edit"></i> <span>Düzenle</span></a></li>
-                  <li role="menuitem"><a href="javascript:void(0)" class="dropdown-item" (click)="showChildModal()"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
+                  <li role="menuitem"><a href="javascript:void(0)" class="dropdown-item"><i class="fa fa-trash-o"></i> <span>Sil</span></a></li>
                 </ul>
               </div>
             </div>
