--- a/src/app/AracDetay/arac-detay.component.html
+++ b/src/app/AracDetay/arac-detay.component.html
@@ -26,7 +26,7 @@
     <div class="col-md-8">
       <!-- Araç Detay -->
 
-      <app-arac-detay-goster-component  [aracDetayInput]="arac_detay"></app-arac-detay-goster-component>
+      <app-arac-detay-goster-component></app-arac-detay-goster-component>
       <!-- Araç Detay -->
     </div>
     <!-- Left -->
