--- a/src/app/Araclar/araclar.component.html
+++ b/src/app/Araclar/araclar.component.html
@@ -50,64 +50,7 @@
         <div class="panel-body" style="padding: 0">
           <div id="arac-listele-body-table-block">
             <div class="table-responsive">
-              <table class="table">
-                <thead>
-                <th class="arac-listele-table-head-text-first">Araç</th>
-                <th class="arac-listele-table-head-text-last" style="text-align: right">Konumu</th>
-                </thead>
-                <tbody>
-                <tr>
-                  <td class="first-table-cell">
-                    <a routerLink="/araclar/5/detay">
-                      <div class="arac-listele-table-left-block">
-                        <div class="arac-listele-table-left-icon-block">
-                          <i class="fa fa-car"></i>
-                          <i class="fa fa-circle arac-listele-table-left-icon-durumu arac-durumu-succes"></i>
-                        </div>
-                        <div class="arac-listele-table-left-arac-marka-full">
-                          <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
-                          <span class="arac-listele-table-left-arac-marka-plaka-span">35 D 8897</span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                  <td style="text-align: right" class="last-table-cell">
-                    <a routerLink="/araclar/5/detay">
-                      <div class="arac-listele-table-right-block">
-                        <div class="arac-listele-table-right-konum-text">
-                          <span>Denizli Merkez Şube</span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="first-table-cell">
-                    <a routerLink="/araclar/6/detay">
-                      <div class="arac-listele-table-left-block">
-                        <div class="arac-listele-table-left-icon-block">
-                          <i class="fa fa-car"></i>
-                          <i class="fa fa-circle arac-listele-table-left-icon-durumu arac-durumu-red"></i>
-                        </div>
-                        <div class="arac-listele-table-left-arac-marka-full">
-                          <span class="arac-listele-table-left-arac-marka-adi-span">Bmw 3 Serisi (Dizel)</span>
-                          <span class="arac-listele-table-left-arac-marka-plaka-span">35 D 8897</span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                  <td style="text-align: right" class="last-table-cell">
-                    <a routerLink="/araclar/6/detay">
-                      <div class="arac-listele-table-right-block">
-                        <div class="arac-listele-table-right-konum-text">
-                          <span>Denizli Merkez Şube</span>
-                        </div>
-                      </div>
-                    </a>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
+              <app-arac-listele-component [Araclar]="araclar"></app-arac-listele-component>
             </div>
           </div>
         </div>
